# TypeRunner

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TODO.md  bench.cpp  main.cpp  package-lock.json  package.json
libs/imgui-texteditor-fork/: .gitignore  CONTRIBUTING  TextEditor.cpp  TextEditor.h
libs/magic_enum/: magic_enum.hpp
src/: CMakeLists.txt  ast.h  core.cpp  core.h  diagnostic_messages.h  enum.h  factory.cpp  factory.h  fs.h  hash.h  node_factory.h  node_test.cpp  node_test.h  parenthesizer.cpp  parenthesizer.h  parser.cpp  parser.h  parser2.cpp  parser2.h  path.cpp  path.h  pool_band.h  scanner.cpp  scanner.h  string.h  syntax_cursor.cpp  syntax_cursor.h  test.d  types.cpp  types.h  utf.cpp  utf.h  utilities.cpp  utilities.h
src/checker/: MemoryPool.h  check2.h  checks.h  compiler.h  debug.h  instructions.h  module2.h  pool_array.h  pool_single.h  type_objects.h  types.h  types2.h  utils.h  vm.cpp  vm.h  vm2.cpp  vm2.h  vm2_utils.h  vm3.h
src/gui/: CMakeLists.txt  app.h  debugger_main.cpp
src/gui/graph/: LICENSE  crossing.hpp  cycle.hpp  graph.hpp  interface.hpp  layering.hpp  layout.hpp  positioning.hpp  report.hpp  router.hpp  subgraph.hpp  types.hpp  utils.hpp  vec2.hpp
src/tests/: CMakeLists.txt  CmakeLists.txt  test_allocator.cpp  test_bench.cpp  test_checker.cpp  test_core.cpp  test_hash.cpp  test_mem.cpp  test_newtypes.cpp  test_parser.cpp  test_pool_array.cpp  test_pool_band.cpp  test_pool_single.cpp  test_scanner.cpp  test_vm2.cpp  test_vm2_class.cpp  test_vm2_closure.cpp  test_vm2_function.cpp  test_vm2_union.cpp  utils.h
tests/: basic1.ts  basicError1.ts  bench.ts  big1.ts  big2.ts  function1.ts  generic2.ts  objectLiterals1.ts  tutorial1.ts
